# scorpio-software-entry

./: CMakeLists.txt  README.md  package.xml
include/virtual_dc_motor/: velocity_controller_node.hpp  velocity_sensor_node.hpp
launch/: virtual_dc_motor.launch
src/: velocity_controller_node.cpp  velocity_sensor_node.cpp
